--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Result</title>
-	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
-	</body>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jimin Jun</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Jimin Jun</h1>
+    </header>
+    <style>
+        body {background-color: gray;}
+        h1   {color: black;}
+        p    {color: black;}
+    </style>
+    <section>
+        <h2>About Me</h2>
+        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy, South Korea. I'm in the department of chemistry, and now interested in synthetic chemistry. </p>
+        <h2>Education</h2>
+        <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
+        Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Jimin Jun</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
 </html>
