--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <h1>Jimin Jun</h1>
     </header>
     <style>
-        body {background-color: gray;}
+        body {background-color: rgb(213, 210, 210);}
         h1   {color: black;}
         p    {color: black;}
     </style>
     <section>
         <h2>About Me</h2>
-        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy, South Korea. I'm in the department of chemistry, and now interested in synthetic chemistry. </p>
+        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy, South Korea.
+        <br>I'm in the department of chemistry, and now interested in synthetic chemistry. </p>
         <h2>Education</h2>
         <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
         Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
