--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Jimin Jun</h1>
-    </header>
     <style>
         body {background-color: rgb(213, 210, 210);}
         h1   {color: black;}
         p    {color: black;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+	.notoserif{font-family: 'Noto Serif', serif;
+    }
     </style>
-    <section>
-        <h2>About Me</h2>
-        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy, South Korea.
-        <br>I'm in the department of chemistry, and now interested in synthetic chemistry. </p>
-        <h2>Education</h2>
+    <header>
+        <h1 class="notoserif">Jimin Jun</h1>
+    </header>
+    <section class="notoserif">
+        <h3>About Me</h3>
+        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy.
+        <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
+        <br>Contact: linearolive@snu.ac.kr
+        </p>
+        <h3>Education</h3>
         <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
+        &emsp;Department of Chemistry <br>
+        &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024- <br>
         Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
     </section>
 
     <footer>
-        <p>&copy; 2025 Jimin Jun</p>
+        <h4>&copy; 2025 Jimin Jun</h4>
     </footer>
 
     <script src="script.js"></script>
