--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         h1   {color: black;}
         p    {color: black;}
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-	.notoserif{font-family: 'Noto Serif', serif;
+	.ns{font-family: 'Noto Serif', serif;
     }
     </style>
     <header>
-        <h1 class="notoserif">Jimin Jun</h1>
+        <h1 class="ns"><b>Jimin Jun</b></h1>
     </header>
-    <section class="notoserif">
-        <h3>About Me</h3>
+    <section class="ns">
+        <h3><b>About Me</b></h3>
         <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy.
         <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
         <br>Contact: linearolive@snu.ac.kr
         </p>
-        <h3>Education</h3>
+        <h3><b>Education</b></h3>
         <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
         &emsp;Department of Chemistry <br>
         &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024- <br>
