--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jimin Jun</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css">
 </head>
 <body>
-    <style>
-        body {background-color: rgb(213, 210, 210);}
-        h1   {color: black;}
-        p    {color: black;}
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-	.ns{font-family: 'Noto Serif', serif;
-    }
-    </style>
     <header>
         <h1 class="ns"><b>Jimin Jun</b></h1>
     </header>
