--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jimin Jun</title>
-    <link href="styles.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
-        <h1 class="ns"><b>Jimin Jun</b></h1>
+        <h1><b>Jimin Jun</b></h1>
     </header>
-    <section class="ns">
+    <section class="styles">
         <h3><b>About Me</b></h3>
         <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National Univeristy.
         <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
@@ -26,7 +26,5 @@
     <footer>
         <h4>&copy; 2025 Jimin Jun</h4>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
