--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1><b>Jimin Jun</b></h1>
     </header>
-    <section class="styles ns">
+    <section class="ns">
         <h3><b>About Me</b></h3>
         <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National University.
         <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
