--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <header>
         <h1><b>Jimin Jun</b></h1>
     </header>
-    <section class="ns">
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Project</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main class="ns">
         <h3><b>About Me</b></h3>
         <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National University.
         <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
@@ -21,7 +30,7 @@
         &emsp;Department of Chemistry <br>
         &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024- <br>
         Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
-    </section>
+    </main>
 
     <footer>
         <h4>&copy; 2025 Jimin Jun</h4>
