--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jimin Jun</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1><b>Jimin Jun</b></h1>
     </header>
-    <nav class="navbar">
+    <nav class="navbar ns">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="">About</a></li>
@@ -23,7 +24,7 @@
         <h3><b>About Me</b></h3>
         <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National University.
         <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
-        <br>Contact: linearolive@snu.ac.kr
+        <br>Contact: linearolive at snu dot ac dot kr
         </p>
         <h3><b>Education</b></h3>
         <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
