--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
     </nav>
 
     <main class="ns">
-        <h3><b>Hello!</b></h3>
-        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National University.
-        <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
-        <br>Contact: linearolive at snu dot ac dot kr
-        </p>
+        <h3><b>Education</b></h3>
+        <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
+        &emsp;Department of Chemistry <br>
+        &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024- <br>
+        Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
     </main>
 
     <footer>
