--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="">Project</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
