--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,14 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Project</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="conact.html">Contact</a></li>
         </ul>
     </nav>
 
     <main class="ns">
         <h3><b>Hello!</b></h3>
-        <p>My name is Jimin Jun (전지민), an undergraduate student in Seoul National University.
-        <br>I'm in the department of chemistry, and now interested in synthetic chemistry. 
+        <p>
+        e-mail: linearolive at snu dot ac dot kr
         </p>
     </main>
 
