--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,10 @@
     </nav>
 
     <main class="ns">
-        <h3><b>Hello!</b></h3>
+        <h3><b>To contact</b></h3>
         <p>
-        e-mail: linearolive at snu dot ac dot kr
+        e-mail: linearolive at snu dot ac dot kr<br>
+        <A href="https://en.snu.ac.kr/">Seoul National University</A>, Gwanak-ro 1, Gwanak-gu, Seoul City, Korea (08826)
         </p>
     </main>
 
