--- a/about.html
+++ b/about.html
@@ -24,8 +24,12 @@
         <h3><b>Education</b></h3>
         <p> Undergraduate, Seoul National University (Seoul, Korea) Mar 2024- <br>
         &emsp;Department of Chemistry <br>
-        &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024- <br>
         Seoul Science High School (Seoul, Korea) Mar 2021-Feb 2024 </p>
+        <h3><b>Experience</b></h3>
+        <p> Seoul National University <br>
+        &emsp;Undergraduate Internship @<A href="https://www.leelab.snu.ac.kr/">leelab</A> Dec 2024-</p>
+        <h3><b>Award</b></h3>
+        <p> Silver Medal in International Chemistry Olympiad 2023 </p>
     </main>
 
     <footer>
